--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "git-test",
   "version": "1.0.0",
   "description": "This is a test directory to learn GIT and NODE",
-  "main": "index.html",
+  "main": "Index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"start":"npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"lite":"lite-server"
   },
   "repository": {
     "type": "git",
